Updates to syllabi

--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -40,7 +40,7 @@
                 <p>
                     This page serves as a collection of the most common and most important Course Questions to help you succeed. Be sure to look through the various sections. I will keep this page as up-to-date as possible to address any questions that you and your classmates bring up as well as any changes that we need to make.
                 </p>
-                <p>Date of Last Update: 8/20/2023</p>
+                <p>Date of Last Update: 8/26/2023</p>
                 <h3 id="catTop">Categories</h3>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li><a href="#keyInfo" class="bodylinks">Key Course Information</a></li>
@@ -589,35 +589,22 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq80" class="toggle" type="checkbox">
-                        <label for="faq80" class="lbl-toggle" tabindex="0">What are Neil's responsibilities as the instructor?</label>
+                        <label for="faq80" class="lbl-toggle" tabindex="0">Updated: What are Neil's responsibilities as the instructor?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
-                                <p><mark>The class will create a list of responsibilities for myself as the instructor.</mark></p>
                                 <p>
-                                    Here's what the Spring 2023 classes came up with:
+                                    Here's what the Fall 2023 class came up with:
                                     <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2">
-                                        <li>Be understanding</li>
-                                        <li>Be available outside of class; make sure to hold Student Hours</li>
-                                        <li>Explain material to the best of my ability</li>
-                                        <li>Keep Canvas updated</li>
-                                        <li>Keep surprise assignments to a minimum</li>
-                                        <li>Provide timely feedback (grading)</li>
-                                        <li>Answer emails/messages in a timely manner</li>
-                                        <li>Provide clear instructions and expectations</li>
-                                        <li>Do my best to help students learn</li>
-                                        <li>Communicate effectively</li>
-                                        <li>Act with fairness</li>
-                                        <li>Keep tabs on where the class is at in their learning</li>
-                                        <li>Respect everyone</li>
-                                        <li>Provide time for thinking, and doing work</li>
-                                        <li>Be passionate about the content and teaching</li>
-                                        <li>Engage with students</li>
-                                        <li>Post notes online</li>
-                                        <li>Cultivate a productive and positive classroom atmosphere</li>
-                                        <li>Keep in mind everyone is human and has many demands on their time/energy (this isn't the only thing people have going on)</li>
-                                        <li>Provide resources</li>
-                                        <li>Help students in need</li>
-                                        <li>Be explicit with expectations for grading</li>
+                                        <li>Explain the grading system routinely throughout the semester</li>
+                                        <li>Check student understanding after each class</li>
+                                        <li>Provide a welcoming and inclusive environment</li>
+                                        <li>Have patience</li>
+                                        <li>Provide quick/timely email responses</li>
+                                        <li>Be willing to talk with and help students; open communication</li>
+                                        <li>Upload grades in a timely manner</li>
+                                        <li>Answer every student's questions in class</li>
+                                        <li>The three you listed (i.e., design experiences for our learning, assess our lerning, cheerlead/support us)</li>
+                                        <li>(One for fun) Provide baked goods weekly. (Sadly, I won't be able to achieve this.)</li>
                                     </ul>
                                 </p>
                             </div>
@@ -1359,15 +1346,28 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq82" class="toggle" type="checkbox">
-                        <label for="faq82" class="lbl-toggle" tabindex="0">Can I use ChatBots/Generative AI in this course?</label>
+                        <label for="faq82" class="lbl-toggle" tabindex="0">Updated: Can I use ChatBots/Generative AI in this course?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
+                                <h3>Neil's Thoughts</h3>
                                 <p>
                                     Chatbots such as OpenAI's ChatGPT or Google's Bard appear confident in the answers they provide. However, their answers are not always logical nor stand up to scrutiny. If a person relies upon chatbots to do their work, they will miss out on critical opportunities to develop the ways of thinking necessary to detect problems with AI generated answers.
                                 </p>
                                 <p>
                                     Overly relying on other tools (e.g., ChatGPT, Bard, CodePilot, Stack Overflow, etc.) will limit your growth. This can then have implications for your job if you are constantly using these tools to do your work. Therefore, unless explicit permission is given for a particular assignment, the entire class community (the instructor, the students, TAs, etc.) should actively refrain from using generative AI tools. When such use is explicitly authorized, that work should be properly documented. Direct usage of output from chatbots should be treated much like a direct quotation; derivations of such output should be treated as paraphrased text.
                                 </p>
+                                <h3>The Classes Thoughts</h3>
+                                <p>
+                                    The class was fairly mixed about using such resources. The general sense of using such tools revolved around using them for limited things and with (extreme) caution. Suggested uses include: helping to debug code, convert formats (e.g., an English description into a LaTeX formatted chunk of code), a study tool to create practice problems, a fancy form of a search engine, and as a source of inspiration. All answers from geneative AI should be treated with great care and used at the students own risk.
+                                </p>
+                                <p>
+                                    The class appears to feel that while using such resources could potentially help, there are limits to how they can be used. Here are Standards of Practice:
+                                </p>
+                                <ul>
+                                    <li>Don't copy and paste directly from the tool.</li>
+                                    <li>Can't use the tool to get complete answers; you can't use the tool to solve/answer a question on a graded assignment.</li>
+                                    <li>Clearly state what tool you used, where and how (i.e., cite)</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
