--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -30,9 +30,9 @@
                     This page serves as the Course Frequenty Asked Questions (FAQ) page and syllabus for Neil's STAT 184: Introduction to R course in Fall 2023. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
                 <p><mark>Highlighted/marked text</mark> indicates a place where the class (you) will have a say in the creation of a course policy. After the first week, we'll have these sections filled out.</p>
-                <p>Last updated: 8/20/2023</p>
+                <p>Last updated: 8/26/2023</p>
                 <h2 id="topLinks">Quick Links</h2>
-                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
                     <li><a href="#meetingInfo" class="bodylinks">Course Meeting Info</a></li>
                     <li><a href="#contactInfo" class="bodylinks">Instructor Info</a></li>
@@ -206,15 +206,22 @@
                     <li>Do your work on time</li>
                     <li>Be sure that you have considerable engagement/participation throughout the semester</li>
                 </ul>
-                <h3>Instructor Responsibilities</h3>
-                <p><mark>The class will come up with a lit of responsibilities they feel are important for me as the instructor.</mark></p>
-                <p>Fall 2022's list:</p>
-                <ul>
-                    <li>Give feedback</li>
-                    <li>Be accessible</li>
-                    <li>Grade fairly</li>
-                    <li>Give answers to assignments</li>
-                    <li>Give partial credit where applicable</li>
+                <h3>Updated: Instructor Responsibilities</h3>
+                <p>Fall 2023's list:</p>
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
+                    <li>Teach the class in engaging ways</li>
+                    <li>Answer student questions</li>
+                    <li>Create fair assessments</li>
+                    <li>Hold Student Hours</li>
+                    <li>Post materials to Canvas</li>
+                    <li>Check that everyone is working towards understanding the content</li>
+                    <li>Give clear instructions</li>
+                    <li>Care about the students</li>
+                    <li>Set the students up for success</li>
+                    <li>Provide a safe environment for asking questions</li>
+                    <li>Help/support students</li>
+                    <li>Try to connect content to real-world applications</li>
+                    <li>Communicate clearly</li>
                 </ul>
                 <h3>Attendance and Participation Policies</h3>
                 <p>
