--- a/stat380syllabus.html
+++ b/stat380syllabus.html
@@ -31,9 +31,9 @@
                 </p>
                 <p><mark>Highlighted/marked text</mark> indicates a place where the class (you) will have a say in the creation of
                 a course policy. After the first week, we'll have these sections filled out.</p>
-                <p>Last updated: 8/20/2023</p>
+                <p>Last updated: 8/26/2023</p>
                 <h2 id="topLinks">Quick Links</h2>
-                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
                     <li><a href="#meetingInfo" class="bodylinks">Course Meeting Info</a></li>
                     <li><a href="#contactInfo" class="bodylinks">Instructor Info</a></li>
@@ -184,8 +184,27 @@
                 </ol>
                 <h3 id="student-responsibilities">Student Responsibilities</h3>
                 <p><mark>The class will come up with a list of student responsibilities.</mark></p>
-                <h3 id="instructor-responsibilities">Instructor Responsibilities</h3>
-                <p><mark>The class will come up with a lit of responsibilities they feel are important for me as the instructor.</mark></p>
+                <h3 id="instructor-responsibilities">Updated: Instructor Responsibilities</h3>
+                <p>The Fall 2023 class came up with the following instructor responsibilities:</p>
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
+                    <li>Answer student questions</li>
+                    <li>Help students</li>
+                    <li>Teach in a thoughtful manner</li>
+                    <li>Be understanding of students</li>
+                    <li>Give good explanations for materials and assignments</li>
+                    <li>Be available</li>
+                    <li>Respond to student emails</li>
+                    <li>Provide timly feedback on assignments</li>
+                    <li>Provide opportunities to discuss content</li>
+                    <li>Keep class engaging and interactive</li>
+                    <li>Use a mixture of different types of teaching strategies</li>
+                    <li>Hold useful Student Hours</li>
+                    <li>Be patient</li>
+                    <li>Be respectful of students' time</li>
+                    <li>Do your best</li>
+                    <li>Identify where students are struggling and then provide support</li>
+                    <li>Provide resources to support students</li>
+                </ul>
                 <h3>Attendance and Participation Policies</h3>
                 <p>
                     Attendance and participation are vitally important for our class community. Attending each
