--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -30,7 +30,7 @@
                     This page serves as the Course Frequenty Asked Questions (FAQ) page and syllabus for Neil's STAT 184: Introduction to R course in Fall 2023. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
                 <p><mark>Highlighted/marked text</mark> indicates a place where the class (you) will have a say in the creation of a course policy. After the first week, we'll have these sections filled out.</p>
-                <p>Last updated: 8/26/2023</p>
+                <p>Last updated: 9/2/2023</p>
                 <h2 id="topLinks">Quick Links</h2>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
@@ -195,17 +195,27 @@
                         pose questions to help them construct meaning rather than show them how to get an answer.
                     </li>
                 </ol>
-                <h3>Student Responsibilities</h3>
-                <p><mark>The class will come up with a list of student responsibilities.</mark></p>
-                <p>Fall 2022's list:</p>
-                <ul>
-                    <li>Attend class (on time)</li>
-                    <li>Don't cheat</li>
-                    <li>Be courteous, respectful, and friendly</li>
-                    <li>Make an effort in class</li>
-                    <li>Do your work on time</li>
-                    <li>Be sure that you have considerable engagement/participation throughout the semester</li>
-                </ul>
+                <h3>Updated: Student Responsibilities</h3>
+                <p>Fall 2023's list of student responsibilities</p>
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
+                    <li>Don't waste time</li>
+                    <li>Get work in on time</li>
+                    <li>Be ready and prepared for class</li>
+                    <li>Work with others in a timely, respectful manner</li>
+                    <li>Be understanding of others</li>
+                    <li>Do your part in group work</li>
+                    <li>Try to do your best</li>
+                    <li>Show up to class </li>
+                    <li>Have a "ready to learn" attitude</li>
+                    <li>Be respectful of everyone and the class environment</li>
+                    <li>Express when you're confused or have questions; ask questions</li>
+                    <li>Show improvment</li>
+                    <li>Participate</li>
+                    <li>Listen to what everyone has to say</li>
+                    <li>Be engaged during class</li>
+                    <li>Exhibit academic integrity</li>
+                    <li>Help others when they ask and you can</li>
+                  </ul>
                 <h3>Updated: Instructor Responsibilities</h3>
                 <p>Fall 2023's list:</p>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
@@ -225,24 +235,34 @@
                 </ul>
                 <h3>Attendance and Participation Policies</h3>
                 <p>
-                    Attendance and participation are vitally important for our class community. Attending each
-                    class session is an important part of becoming a professional member of our community. However,
-                    attendance alone will not guarantee that each person will get the most they can out of the course.
-                    This is where your participation comes into play. I will do what I can to provide a variety of ways
-                    for people to participate.
+                    Attendance and participation are vitally important for our class community. Attending each class session is an important part of becoming a professional member of our community. However, attendance alone will not guarantee that each person will get the most they can out of the course. This is where your participation comes into play. I will do what I can to provide a variety of ways for people to participate.
                 </p>
                 <h4 id="attendance">Attendance</h4>
                 <p>
-                    You will need to attend each class session baring illness, participation in a Univeristy
-                    sanctioned event, or religious observance/practice. We know from past education research
-                    that absences can negatively affect students' success. I want you each to find success in this
-                    course so please let me know if you are going to be absent so that we might work together to ensure
-                    you don't get off track.
+                    You will need to attend each class session baring illness, participation in a Univeristy sanctioned event, or religious observance/practice. We know from past education research that absences can negatively affect students' success. I want you each to find success in this course so please let me know if you are going to be absent so that we might work together to ensure you don't get off track.
                 </p>
-                <h4 id="participation">Participation</h4>
+                <h4 id="participation">Updated: Participation</h4>
                 <p>
-                    <mark>To be determined by class discussion.</mark>
+                    The Fall 2023 class generated the following markers of participating in class:
                 </p>
+                <ul style="column-count:3; -webkit-column-count:3; -moz-column-count:3; -o-column-count:3;">
+                    <li>Paying attention</li>
+                    <li>Answering questions</li>
+                    <li>Getting involved in discussions (small or large group)</li>
+                    <li>Asking questions</li>
+                    <li>Using the signal cups</li>
+                    <li>Working in groups</li>
+                    <li>Participate even if not graded</li>
+                    <li>Actively collaborate and work on course assignments</li>
+                    <li>Be involved to the level and manner of your comfort</li>
+                    <li>Take notes</li>
+                    <li>Attend class</li>
+                    <li>Do assignments</li>
+                    <li>Engage with the activities, discussions in class</li>
+                    <li>Raise your hand</li>
+                    <li>Seeking help when you need it</li>
+                    <li>Put in effort</li>
+                  </ul>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="assignments">How does grading work? (Assignments and Assessment)</h2>
                 <h3>My Assessment Approach</h3>
@@ -252,7 +272,7 @@
                     push you to continue to grow. I encourage you to view any assignments as an opportunity to engage in
                     self-reflection.
                 </p>
-                <h3>Types of Assignments</h3>
+                <h3>Updated: Types of Assignments</h3>
                 <p>
                     Throughout the semester, we'll have a variety of assignments for you to complete either
                     individually or as part of a group.
@@ -278,26 +298,18 @@
                         discussed in class and/or put you in a beneficial position for other activities, projects, etc.
                     </li>
                     <li>
-                        <strong>Tests:</strong> <mark>Depending on the outcome of the class's vote, there may be one
-                        or more tests during the semester.</mark>
+                        <strong>(Updated) Tests:</strong> The Fall 2023 clas has voted to have two tests. These tests will be timed (50 minutes) in accordance to the class's vote. Additionally, students will be allowed to use their personal notes for the tests. The mode (in-class or take home) will be announced closer to each test.
                     </li>
                     <li>
-                        <strong>Final Exam:</strong> <mark>Depending upon the outcome of the class's vote, there may
-                        be a final exam.</mark>
+                        <strong>(Updated) Final Exam:</strong> The Fall 2023 class has voted to have an optional final exam. Neil will do what he can to make the exam beneficial to students, subject to the constraints of the system. The final exam--should a student wish to take it--will be take home during finals week. The exam will be available starting at 8am the Monday of finals week and must be submitted by 5pm the Friday of finals week. Once started, the student will have 24 hours to complete the exam. Students will be able to use course materials (personal and/or those provided in Canvas by the instructor).
                     </li>
                     <li>
-                        <strong>Final Project:</strong> The final project provides students with an opportunity
-                        to apply what they have learned throughout the semester to a new situation. Additional details
-                        about the project will be shared in class.
+                        <strong>Final Project:</strong> The final project provides students with an opportunity to apply what they have learned throughout the semester to a new situation. Additional details about the project will be shared in class.
                     </li>
                 </ul>
-                <h3 id="late-passes">Late Submissions</h3>
+                <h3 id="late-passes">(Updated) Late Submissions</h3>
                 <p>
-                    Assignments that are part of MyOpenMath (MOM) will allow each student to use a Late Pass to given
-                    themselves additional time to complete the assignment. <mark>The class will vote on two pieces for
-                    Late Passes: how much time each Late Pass extends the deadline and the max number of Late Passes
-                    a student can apply to any one assignment.</mark> Not all assignments will be eligible for using
-                    late passes (e.g., group assignment, quizzes, tests).
+                    Assignments that are part of MyOpenMath (MOM) will allow each student to use a Late Pass to given themselves additional time to complete the assignment. The Fall 2023 class has voted to have each Late Pass grant an additional 24 hours of time and students may use up to one (1) on assignments (provided late passes are allowed and the student has available passes). Not all assignments will be eligible for using late passes (e.g., group assignment, quizzes, tests).
                 </p>
                 <p>
                     You do not need to ask me to use a late pass. These are things you can automatically
@@ -669,18 +681,12 @@
                     from chatbots should be treated much like a direct quotation; derivations of such output should 
                     be treated as paraphrased text.
                 </p>
-                <h3>Consequences</h3>
+                <h3>Updated: Consequences</h3>
                 <p>
-                    Any instances of academic dishonesty will be pursued under the&nbsp;<a class="bodylinks"
-                    target="_blank" rel="noopener" href="https://science.psu.edu/current-students/integrity">
-                    University and Eberly College of Science regulations</a>&nbsp;concerning academic
-                    integrity. For more information on academic integrity, see&nbsp;<a class="bodylinks"
-                    target="_blank" rel="noopener" href="http://tlt.its.psu.edu/suggestions/cyberplag/cyberplagstudent.html">
-                    Penn State's statement on plagiarism and academic dishonesty</a>.
+                    Any instances of academic dishonesty will be pursued under the&nbsp;<a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/current-students/integrity">University and Eberly College of Science regulations</a> concerning academic integrity. For more information on academic integrity, see <a class="bodylinks" target="_blank" rel="noopener" href="http://tlt.its.psu.edu/suggestions/cyberplag/cyberplagstudent.html"> Penn State's statement on plagiarism and academic dishonesty</a>.
                 </p>
-                <p><mark>The class will generate ideas and then vote on consequences.</mark></p>
                 <table rules="all" border="1pt">
-                    <caption>Fall 2022 Consequences/Sanctions for Violating Academic Integrity</caption>
+                    <caption>Fall 2023 Consequences/Sanctions for Violating Academic Integrity</caption>
                     <tr>
                         <td></td>
                         <th scope="col">First Time</th>
@@ -689,21 +695,21 @@
                     </tr>
                     <tr>
                         <th scope="row">Minor</th>
-                        <td>Warning</td>
-                        <td>Redo the assignment </td>
-                        <td>0 for Assignment Grade</td>
+                        <td>Redo the assignment</td>
+                        <td>Assignment Grade is lowered by 3 rubric levels</td>
+                        <td>Assignment Grade of 0</td>
                     </tr>
                     <tr>
                         <th scope="row">Moderate</th>
-                        <td>Redo the assignment</td>
-                        <td>Reduce the Assignment Grade by 2 levels</td>
-                        <td>Reduce the Course Grade by 1 level</td>
+                        <td>Assignment Grade is lowered by 1-2 rubric levels</td>
+                        <td>Assignment Grade of 0</td>
+                        <td>Course Grade lowered by 1 step</td>
                     </tr>
                     <tr>
                         <th scope="row">Major</th>
-                        <td>Redo the assignment & reduce the Assignment Grade by 1 level</td>
-                        <td>Reduce the Course Grade by 1 level</td>
-                        <td>Recommend a Grade of XF for the course to the Committee</td>
+                        <td>Assignment Grade of 0</td>
+                        <td>Course Grade is lowered by 1 step</td>
+                        <td>Fail the Course (Grade XF)</td>
                     </tr>
                 </table>
                 <p>
