--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -610,7 +610,7 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq56" class="toggle" type="checkbox">
-                        <label for="faq56" class="lbl-toggle" tabindex="0">Updated: What counts as participation? Is visiting
+                        <label for="faq56" class="lbl-toggle" tabindex="0" id="participation">Updated: What counts as participation? Is visiting
                             your office outside of class participation?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
