--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -554,7 +554,7 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq79" class="toggle" type="checkbox">
-                        <label for="faq79" class="lbl-toggle" tabindex="0">Updated: What are my responsibilities as a student in the class?</label>
+                        <label for="faq79" class="lbl-toggle" tabindex="0" id="studentResponsibilities">Updated: What are my responsibilities as a student in the class?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
                                 <p>
