--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -576,7 +576,7 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq80" class="toggle" type="checkbox">
-                        <label for="faq80" class="lbl-toggle" tabindex="0">Updated: What are Neil's responsibilities as the instructor?</label>
+                        <label for="faq80" class="lbl-toggle" tabindex="0" id="instructorResponsibilities">Updated: What are Neil's responsibilities as the instructor?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
                                 <p>
