--- a/teaching.html
+++ b/teaching.html
@@ -31,15 +31,12 @@
           </ul>
         </div>
         <div id="contentnobars">
-          <h2 id="current"><a name="current"></a>Current Courses-Spring 2023<br />
-          </h2>
+          <h2 id="current">Current Courses-Spring 2024</h2>
             <ul>
-              <li>Stat 184: Introduction to R. Check out the <a href="stat184syllabus.html" class="bodylinks">STAT184 Course FAQ (syllabus)</a>.</li>
-              <li>Stat 380: Data Science Through Statistical Reasoning and Computation. Check out the <a href="stat380syllabus.html" class="bodylinks">STAT380 Course FAQ (syllabus)</a>.</li>
               <li>Stat 461: Analysis of Variance. Check out the <a href="stat461syllabus.html" class="bodylinks">STAT461 Course FAQ (syllabus)</a>.</li>
-              <li>Stat 592: Teaching Statitics. Check out the <a href="stat592syllabus.html" class="bodylinks">STAT592 Syllabus</a>.</li>
-          <br />
-          <h2 id="readings"><a name="readings"></a>Useful Readings<br /></h2>
+              <li>Stat 597.005 Statistics Eduction: From Theory to Practice. Check out the <a href="stat597syllabus.html" class="bodylinks">STAT597 Course FAQ (syllabus)</a>.</li>
+          </ul>
+          <h2 id="readings"><a name="readings"></a>Useful Readings</h2>
           <p>The following readings are some that I have been developing for a number of semesters and reflect my most recent thinking in the various areas. I tend to update these files periodically so you'll want to check the files here to see if you have the most recent.  If you have constructive feedback, please feel free to send me your thoughts.</p>
           <ul>
               <li><a class="bodylinks" target="_blank" href="1_Resources/readings/Introduction_MeaningfulStatistics.pdf">Introduction to Meaningful Statistics</a></li>
@@ -70,10 +67,11 @@
           </h2>
           <h3>Pennsylvania State University</h3>
           <ul>            
-              <li>STAT 184: Introduction to R-Fall 2022, 2023</li>
-              <li>STAT 461: Analysis of Variance-Spring 2020, 2021, 2022, 2023; Fall 2022</li>
-              <li>STAT 592: Teaching Statistics-Fall 2021<sup>*</sup>, 2022, 2023 </li>
-              <li>STAT 597: Statistics Education Reserach Special Topics--Spring 2020<sup>*</sup>, 2022<sup>*</sup></li>
+              <li>STAT 184: Introduction to R-Fall 2022, <a href="stat184syllabus.html" class="bodylinks">2023 (click to see syllabus)</a></li>
+              <li>STAT 380: Data Science Through Statistical Reasoning and Computation-Fall <a href="stat380syllabus.html" class="bodylinks">2023 (click to see syllabus)</a></li>
+              <li>STAT 461: Analysis of Variance-Spring 2020, 2021, 2022, 2023, 2024; Fall 2022, 2023</li>
+              <li>STAT 592: Teaching Statistics-Fall 2021<sup>*</sup>, 2022, <a href="stat592syllabus.html" class="bodylinks">2023 (click to see syllabus)</a> </li>
+              <li>STAT 597: Statistics Education Reserach Special Topics--Spring 2020<sup>*</sup>, 2022<sup>*</sup>, 2024<sup>*</sup></li>
           </ul>
           <p>
             <sup>*</sup> indicates co-teaching.
@@ -129,7 +127,7 @@
                 src="1_Images/psu_mark.jpg"
                 class="noborder"
                 style="width: 318px; height: 85px;" /></a><br />
-            © 2023 Neil Hatfield <br />
+            © 2024 Neil Hatfield <br />
           </div>
         </div>
       </div>
