--- a/stat597syllabus.html
+++ b/stat597syllabus.html
@@ -265,7 +265,7 @@
                     <tr>
                         <td>Feb. 5</td>
                         <td>Reform Pedagogy</td>
-                        <td>TBA</td>
+                        <td>Samantha Prins, James Madison University</td>
                     </tr>
                     <tr>
                         <td>Feb. 12</td>
