--- a/stat597syllabus.html
+++ b/stat597syllabus.html
@@ -254,7 +254,7 @@
                     </tr>
                     <tr>
                         <td>Jan. 22</td>
-                        <td>History of Statsitics and Data Science Education</td>
+                        <td>History of Statistics and Data Science Education</td>
                         <td>Andy Zieffler, University of Minnesota</td>
                     </tr>
                     <tr>
@@ -289,7 +289,7 @@
                     </tr>
                     <tr>
                         <td>Mar. 11</td>
-                        <td>Asssessment</td>
+                        <td>Assessment</td>
                         <td>Doug Whitaker, Mount Saint Vincent University</td>
                     </tr>
                     <tr>
