--- a/stat597syllabus.html
+++ b/stat597syllabus.html
@@ -29,7 +29,7 @@
                 <p>
                     This page serves as the syllabus for the STAT 597.005--Statistics Education: From Theory to Practice course in Spring 2024. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
-                <p>Last Updated: 1/5/2024</p>
+                <p>Last Updated: 1/9/2024</p>
                 <h2 id="topLinks">Quick Links</h2>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
@@ -118,16 +118,32 @@
                     </li>
                 </ol>
                 <h3>Student Responsibilities</h3>
-                <p><mark>The class will determine what is entailed in student responsibilities.</mark></p>
+                <p>The Spring 2024 class came up with the following responsiblities for themsleves.</p>
+                <ul>
+                    <li>Come to class; let people (esp. Neil) know when you will be absent.</li>
+                    <li>Read the required readings.</li>
+                    <li>Be an active listener and speaker.</li>
+                    <li>Keep the conversation flowing.</li>
+                    <li>Prepare questions for the guest speaker.</li>
+                    <li>Keep track of comments/questions you have as read (i.e., engage in active reading).</li>
+                    <li>Be respectful of others.</li>
+                </ul>
                 <h3>Teacher Responsibilities</h3>
-                <p><mark>The class will determine what teacher's responsibilities Neil will strive to maintain.</mark></p>
+                <p>The Spring 2024 class came up with the following responsibilities for the instructor.</p>
+                <ul>
+                    <li>Encourage participation.</li>
+                    <li>Mangage discussion to prevent one dominate voice.</li>
+                    <li>Come to class.</li>
+                    <li>Pick readings.</li>
+                    <li>Provide hints as to how papers connect each week.</li>
+                    <li>Provide feedback on posts.</li>
+                    <li>Provide guidance on developing as a discussion leader.</li>
+                    <li>Bring baked goods.</li>
+                    <li>Be respectful.</li>
+                </ul>
                 <h3>Attendance and Participation Policy</h3>
                 <p>
-                    Attendance and participation are vitally important for our class community. Attending each class
-                    session is an important part of becoming a professional member of our community. However, attendance
-                    alone will not guarantee that each person will get the most they can out of the course. This is
-                    where your participation comes into play. I will do what I can to provide a variety of ways
-                    for people to participate.
+                    Attendance and participation are vitally important for our class community. Attending each class session is an important part of becoming a professional member of our community. However, attendance alone will not guarantee that each person will get the most they can out of the course. This is where your participation comes into play. I will do what I can to provide a variety of ways for people to participate.
                 </p>
                 <h4>Attendance</h4>
                 <p>
@@ -136,18 +152,20 @@
                     be absent. Abscences can jeopardize your final course grade.
                 </p>
                 <p>
-                    Students who are absent three or more times throughout the semester may receive a failing grade for
-                    the course. (Note: Three abscences is equivalent to missing 20% of the course.)
+                    Students who are absent three or more times throughout the semester may receive a failing grade for the course. (Note: Three abscences is equivalent to missing 20% of the course.)
                 </p>
                 <h4>Participation</h4>
                 <p>
                     Given that this course is primarily discussion based, your participation is absolutely necessary. For this course, we agreed to define participation as:
                 </p>
                 <ul>
-                    <li>
-                        <mark>The class will develop a working definition of participation.</mark>
-                    </li>
+                    <li>Engaging in active listening,</li>
+                    <li>Being engaged in class, even if you aren't the discussion leader or currently talking,</li>
+                    <li>Contributing some thought(s) to the current discussion,</li>
+                    <li>Being responsive on Canvas as well as in class, and</li>
+                    <li>Being respectful of others.</li>
                 </ul>
+                <p>There is intential overlap between student responsibilities and our definition of participation.</p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="assignments">Assignments and Assessment</h2>
                 <h3>My Assessment Approach</h3>
